--- a/style.css
+++ b/style.css
@@ -654,6 +654,7 @@ input{
    .collection-text h1{
       font-size: 2rem;
       font-weight: bolder;
-      text-align: center
+      text-align: center;
+      word-spacing: 1px !important;
    }
 };
